--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
     <input type="number" id="input-time" placeholder="Enter time " min="1" max="60">
     <button id="start-btn">Start</button>
     <button id="pause-btn">Pause</button>
+    <button id="resume-btn">Resume</button>
     <button id="reset-btn">Reset</button>
     <div id="timer-display">00:00</div>
 </div>
